added seo in index and also created logo

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <title>React App</title>
+    
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="MTask - Task Management Made Simple" />
+    <meta name="description" content="MTask is a task management app for organizing, managing, and tracking tasks efficiently. Sign up, categorize tasks, and analyze progress easily!" />
+
+    <!-- Schema.org for Google -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "MTask",
+        "url": "https://m-tasks.vercel.app",
+        "description": "MTask is a task management application that allows users to sign up, log in, create, and categorize tasks as completed, pending, or failed. Manage and analyze your productivity effortlessly.",
+        "applicationCategory": "Productivity",
+        "operatingSystem": "Web",
+        "creator": {
+          "@type": "Person",
+          "name": " Mustafa Lanewala",
+          "url": "https://mustafalanewala.framer.ai"
+        },        
+        "keywords": "task management, productivity, to-do list, task organizer, task tracker",
+        "datePublished": "2024-10-25",
+        "mainEntityOfPage": "https://m-tasks.vercel.app"
+      }
+    </script>
+
+    <title>MTask - Task Management Made Simple</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
